--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
         <div class="head">
-            <img class="logo" src="images/logo.jpg" alt="Logo">
+            <img class="logo" src="logo.jpg" alt="Logo">
             <div class="texts">
             <span>Home</span>
             <span>Services</span>
@@ -42,8 +42,8 @@
             </div>
             <div>
         <div class="mainContent1">
-        <img class="pic1" src="images/pic1.jpeg" alt="Image1">
-        <img class="pic2" src="images/pic2.jpeg" alt="Image2">
+        <img class="pic1" src="pic1.jpeg" alt="Image1">
+        <img class="pic2" src="pic2.jpeg" alt="Image2">
         <div class="mainContent2">
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
